--- a/templates/about.html
+++ b/templates/about.html
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
-<html lang="en"  xmlns:th="http://www.thymeleaf.org">
-	<head th:replace="_fragments :: head(~{::title})">
+<html lang="en">
+	<head>
+		<meta charset="utf-8" />
+		<meta name="viewport"content="width=device-width,initial-scale=1.0" />
 		<title>分类页面</title>
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
+		<link rel="stylesheet" type="text/css" href="../static/css/me.css"/>
 	</head>
 	<body>
-	<nav th:replace="_fragments :: menu(5)" >
-
-	</nav>
+		<nav class="ui inverted  attached segment m-padded-tb-mini m-shadow-small"  >
+			<div class="ui container ">			
+				<div class="ui inverted secondary stackable menu">
+				<h2 class="ui teal header item">blog</h2>
+				<a href="#"class="m-item item m-mobile-hide"><i class="home icon"></i>首页</a>
+				<a href="#"class=" m-item item m-mobile-hide"><i class="idea icon"></i>分类</a>
+				<a href="#"class="m-item item m-mobile-hide"><i class="tags icon"></i>标签</a>
+				<a href="#"class="m-item item m-mobile-hide"><i class="clone icon"></i>归档</a>
+				<a href="#"class="active m-item item m-mobile-hide"><i class="info icon"></i>关于我</a>
+				<div class="right item m-mobile-hide">
+					<div class="ui icon inverted transparent input">
+						<input type="text" placeholder="Search...." />
+						<i class="search link icon"></i>
+					</div>
+				</div>
+			</div>
+			</div>
+			<a href="#" class="ui menu toggle black icon  button m-top-right m-mobile-show">
+				<i class="sidebar icon"></i>
+			</a>
+		</nav>
 		<div class=" m-padded-tb-big m-container">
 				<div class="ui container">
 					<div class="ui stackable grid">
@@ -34,12 +56,12 @@
 								<div class="ui basic teal left pointing label m-margin-tb-tiny">C++</div>
 							</div>
 							<div class="ui bottom attached segment">
-								<a href="https://github.com/" target="_blank" class="ui circular icon button"><i class="github icon"></i></a>
+								<a href="https://github.com/" class="ui circular icon button"><i class="github icon"></i></a>
 								<a href="#" class="ui wechat  circular icon button"><i class="weixin icon"></i></a>
 								<a href="#" class="ui qq circular icon button" data-content="1316196993" data-position="bottom center"><i class="qq icon"></i></a>
 							</div>
 								<div class="ui wechatQR flowing popup  transition hidden">
-									<img src="../static/images/cat.jpg" th:src="@{/images/cat.jpg}" alt="" class="ui rounded image"style="width: 100px;" />
+									<img src="../static/images/cat.jpg" alt="" class="ui rounded image" style="width: 100px;" />
 								</div>
 						</div>
 					</div>
@@ -47,9 +69,41 @@
 				</div>
 		<br />
 		<br />
-	<footer th:replace="_fragments :: footer" class="ui inverted vertical segment m-padded-tb-massive">
+		<footer class="ui inverted vertical segment m-padded-tb-massive">
+			<div class="ui center aligned container">
+				<div class="ui inverted divided stackable grid">
+					<div class="three wide column">
+						<div class="ui inverted link list">
+							<div class="item">
+						<img src="../static/images/cat.jpg" class="ui rounded image" style="width: 110px;" alt="" />
+					</div>
+					</div>
+					</div>
+					<div class="three wide column">
+						<h4 class="ui inverted header m-text-thin m-text-spaced">最新博客</h4>
+						<div class="ui inverted link list">
+							<a href="#" class="item">用户故事</a>
+							<a href="#" class="item">用户故事</a>
+							<a href="#" class="item">用户故事</a>
+						</div>
+					</div>
+					<div class="three wide column">
+						<h4 class="ui inverted header m-text-thin m-text-spaced">联系我</h4>
+						<div class="ui inverted link list">
+							<a href="#" class="item">Email:1316196993@qq.com</a>
+							<a href="#" class="item">QQ:1316196993</a>
 
-	</footer>
+					</div>
+					</div>
+					<div class="seven wide column">
+						<h4 class="ui inverted header m-text-thin m-text-spaced">自我介绍</h4>
+						<p class="m-text-thin m-text-spaced m-opacity-mini">这是我的个人博客，分享我在生活学习中遇到的问题，欢迎来玩。</p>
+					</div>
+				</div>
+				<div class="ui inverted section divider"></div>
+				<p class="m-text-thin m-text-spaced m-opacity-tiny">Copyright@2020 - 2021 Designed By Deadsec</p>
+			</div>
+		</footer>
 		<script src="https://cdn.jsdelivr.net/npm/jquery@3.2/dist/jquery.min.js"></script>
 		<script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
 
@@ -63,7 +117,6 @@
 				on : 'hover',
 				position: 'bottom center'
 			});
-			$('#newBlog-container').load(/*[[@{/footer/newblog}]]*/"/footer/newblog")
 		</script>
 	</body>
 </html>
