--- a/templates/admin/bolgs.html
+++ b/templates/admin/bolgs.html
@@ -1,17 +1,39 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport"content="width=device-width,initial-scale=1.0" />
 		<title>博客管理</title>
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
-		<link rel="stylesheet" type="text/css" href="css/me.css" th:href="@{/css/me.css}"/>
-
+		<link rel="stylesheet" type="text/css" href="../../css/me.css"/>
+		<script src="../../js/jquery-3.5.1.min.js"></script>
 	</head>
 	<body onload="loadINFO()">
-	<nav th:replace="admin/_fragments :: menu(1)" class="ui inverted  attached segment m-padded-tb-mini m-shadow-small"  >
-
-	</nav>
+		<nav class="ui inverted  attached segment m-padded-tb-mini m-shadow-small"  >
+			<div class="ui container">			
+				<div class="ui inverted secondary stackable menu">
+				<h2 class="ui teal header item">管理后台</h2>
+				<a href="#"class="active m-item item m-mobile-hide"><i class="home icon"></i>博客</a>
+				<a href="#"class=" m-item item m-mobile-hide"><i class="idea icon"></i>分类</a>
+				<a href="#"class="m-item item m-mobile-hide"><i class="tags icon"></i>标签</a>
+				<div class="right m-mobile-hide m-item menu">
+					<div class="ui dropdown item">
+						<div class="text">
+							<img src="https://picsum.photos/id/996/100/100" alt="" class="ui avatar image" />
+							李军
+						</div>
+						<i class="dropdown icon"></i>
+						<div class="menu">
+							<a href="#" class="item">注销</a>
+						</div>
+					</div>
+				</div>
+			</div>
+			</div>
+			<a href="#" class="ui menu toggle black icon  button m-top-right m-mobile-show">
+				<i class="sidebar icon"></i>
+			</a>
+		</nav>
 		<!--二级导航-->
 		<div class="ui attached pointing menu">
 			<div class="ui container">
@@ -98,13 +120,44 @@
 				</div>
 		<br />
 		<br />
-	<footer th:replace="admin/_fragments :: footer" class="ui inverted vertical segment m-padded-tb-massive" >
+		<footer class="ui inverted vertical segment m-padded-tb-massive">
+			<div class="ui center aligned container">
+				<div class="ui inverted divided stackable grid">
+					<div class="three wide column">
+						<div class="ui inverted link list">
+							<div class="item">
+						<img src="../../images/cat.jpg" class="ui rounded image" style="width: 110px;" alt="" />
+					</div>
+					</div>
+					</div>
+					<div class="three wide column">
+						<h4 class="ui inverted header m-text-thin m-text-spaced">最新博客</h4>
+						<div class="ui inverted link list">
+							<a href="#" class="item">用户故事</a>
+							<a href="#" class="item">用户故事</a>
+							<a href="#" class="item">用户故事</a>
+						</div>
+					</div>
+					<div class="three wide column">
+						<h4 class="ui inverted header m-text-thin m-text-spaced">联系我</h4>
+						<div class="ui inverted link list">
+							<a href="#" class="item">Email:1316196993@qq.com</a>
+							<a href="#" class="item">QQ:1316196993</a>
 
-	</footer>
-		<script src="https://cdn.jsdelivr.net/npm/jquery@3.2/dist/jquery.min.js"></script>
+					</div>
+					</div>
+					<div class="seven wide column">
+						<h4 class="ui inverted header m-text-thin m-text-spaced">自我介绍</h4>
+						<p class="m-text-thin m-text-spaced m-opacity-mini">这是我的个人博客，分享我在生活学习中遇到的问题，欢迎来玩。</p>
+					</div>
+				</div>
+				<div class="ui inverted section divider"></div>
+				<p class="m-text-thin m-text-spaced m-opacity-tiny">Copyright@2020 - 2021 Designed By Deadsec</p>
+			</div>
+		</footer>
 
 		<script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
-		<script th:src="@{/js/adminAction.js}"></script>
+
 		<script>
 			$('.menu.toggle').click(function(){
 				$('.m-item').toggleClass('m-mobile-hide');
@@ -112,31 +165,7 @@
 			$('.ui.dropdown').dropdown({
 				on: 'hover'
 			});
-			$('#newBlog-container').load(/*[[@{/footer/newblog2}]]*/"/footer/newblog2");
-
-
-			/**
-			 * 防止浏览器回退
-			 */
-			$(document).ready(function(e) {
-				if (window.history && window.history.pushState) {
-					$(window).on('popstate', function () {
-						window.history.pushState('forward', null, '/admin/login');
-						window.history.forward(1);
-					});
-				}
-				if ('pushState' in history) {
-					window.history.pushState('forward', null, '/admin/login');
-					window.history.forward(1);
-				}else{
-					History.pushState('forward', null, '?state=2');
-					window.history.forward(1);
-				}
-				window.onhashchange=function(){
-					History.pushState('forward', null, '?state=1');
-				}
-			});
 		</script>
-
+		<script src="../../js/adminAction.js"></script>
 	</body>
 </html>
