--- a/templates/archives.html
+++ b/templates/archives.html
@@ -1,63 +1,207 @@
-<!DOCTYPE html >
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="_fragments::head(~{::title})">
-	<meta charset="utf-8" />
-	<meta name="viewport"content="width=device-width,initial-scale=1.0" />
-	<title>归档页面</title>
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
-	<link rel="stylesheet" type="text/css" href="../static/css/me.css"/>
-</head>
-<body>
-
-<!--头部引入-->
-	<nav th:replace="_fragments::menu(4)"></nav>
-
-
-	<div class=" m-padded-tb-big m-container-small">
-		<div class="ui container">
-			<!--头部-->
-			<div class="ui top attached padded segment">
-				<div class="ui middle aligned two column	grid">
-					<div class="column">
-						<h3 class="ui teal header">归档</h3>
-					</div>
-					<div class="right aligned column">
-						共	 <h3 class="ui orange header m-inline-block m-text-thin" th:text="${count}"></h3> 篇博客
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="utf-8" />
+		<meta name="viewport"content="width=device-width,initial-scale=1.0" />
+		<title>归档页面</title>
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
+		<link rel="stylesheet" type="text/css" href="../static/css/me.css"/>
+	</head>
+	<body>
+		<nav class="ui inverted  attached segment m-padded-tb-mini m-shadow-small"  >
+			<div class="ui container">			
+				<div class="ui inverted secondary stackable menu">
+				<h2 class="ui teal header item">blog</h2>
+				<a href="#"class="m-item item m-mobile-hide"><i class="home icon"></i>首页</a>
+				<a href="#"class="m-item item m-mobile-hide"><i class="idea icon"></i>分类</a>
+				<a href="#"class="m-item item m-mobile-hide"><i class="tags icon"></i>标签</a>
+				<a href="#"class="active  m-item item m-mobile-hide"><i class="clone icon"></i>归档</a>
+				<a href="#"class="m-item item m-mobile-hide"><i class="info icon"></i>关于我</a>
+				<div class="right item m-mobile-hide">
+					<div class="ui icon inverted transparent input">
+						<input type="text" placeholder="Search...." />
+						<i class="search link icon"></i>
 					</div>
 				</div>
 			</div>
-
-
-			<th:block th:each="item:${archiveMap}">
-			<h2 class="ui center aligned header" th:text="${item.key}"></h2>
-			<div class="ui fluid vertical menu">
-				<a href="#" th:href="'blog/' + ${blog.id}" target="_blank" class="item" th:each="blog:${item.value}">
-					<span>
-						<i class="mini teal circle icon"></i><span th:text="${blog.title}"></span>
-						<div class="ui teal basic left pointing label m-padded-mini" th:text="${#dates.format(blog.createTime,'MMMdd')}"></div>
-					</span>
-						<div class="ui orange basic left pointing label m-padded-mini" th:text="${blog.flag}"></div>
-				</a>
 			</div>
-			</th:block>
-
+			<a href="#" class="ui menu toggle black icon  button m-top-right m-mobile-show">
+				<i class="sidebar icon"></i>
+			</a>
+		</nav>
+		<div class=" m-padded-tb-big m-container-small">
+				<div class="ui container">
+					<!--头部-->
+					<div class="ui top attached padded segment">
+						<div class="ui middle aligned two column	grid">
+							<div class="column">
+								<h3 class="ui teal header">归档</h3>
+							</div>
+							<div class="right aligned column">
+								共	 <h3 class="ui orange header m-inline-block m-text-thin">14</h3> 篇博客
+							</div>
+						</div>
+					</div>
+					<h2 class="ui center aligned header">2020</h2>
+					<div class="ui fluid vertical menu">
+						<a href="#" target="_blank" class="item">
+							<span>
+								<i class="mini teal circle icon"></i> 最强九五套路
+								<div class="ui teal basic left pointing label m-padded-mini">9月03</div>
+							</span>
+								<div class="ui orange basic left pointing label m-padded-mini">原创</div>
+						</a>
+						<a href="#" target="_blank" class="item">
+							<span>
+								<i class="mini teal circle icon"></i> 最强九五套路
+								<div class="ui teal basic left pointing label m-padded-mini">9月03</div>
+							</span>
+								<div class="ui orange basic left pointing label m-padded-mini">原创</div>
+						</a>
+						<a href="#" target="_blank" class="item">
+							<span>
+								<i class="mini teal circle icon"></i> 最强九五套路
+								<div class="ui teal basic left pointing label m-padded-mini">9月03</div>
+							</span>
+								<div class="ui orange basic left pointing label m-padded-mini">原创</div>
+						</a>
+						<a href="#" target="_blank" class="item">
+							<span>
+								<i class="mini teal circle icon"></i> 最强九五套路
+								<div class="ui teal basic left pointing label m-padded-mini">9月03</div>
+							</span>
+								<div class="ui orange basic left pointing label m-padded-mini">原创</div>
+						</a>
+						<a href="#" target="_blank" class="item">
+							<span>
+								<i class="mini teal circle icon"></i> 最强九五套路
+								<div class="ui teal basic left pointing label m-padded-mini">9月03</div>
+							</span>
+								<div class="ui orange basic left pointing label m-padded-mini">原创</div>
+						</a>
+					</div>
+					<h2 class="ui center aligned header">2019</h2>
+					<div class="ui fluid vertical menu">
+						<a href="#" target="_blank" class="item">
+							<span>
+								<i class="mini teal circle icon"></i> 最强九五套路
+								<div class="ui teal basic left pointing label m-padded-mini">9月03</div>
+							</span>
+								<div class="ui orange basic left pointing label m-padded-mini">原创</div>
+						</a>
+						<a href="#" target="_blank" class="item">
+							<span>
+								<i class="mini teal circle icon"></i> 最强九五套路
+								<div class="ui teal basic left pointing label m-padded-mini">9月03</div>
+							</span>
+								<div class="ui orange basic left pointing label m-padded-mini">原创</div>
+						</a>
+						<a href="#" target="_blank" class="item">
+							<span>
+								<i class="mini teal circle icon"></i> 最强九五套路
+								<div class="ui teal basic left pointing label m-padded-mini">9月03</div>
+							</span>
+								<div class="ui orange basic left pointing label m-padded-mini">原创</div>
+						</a>
+						<a href="#" target="_blank" class="item">
+							<span>
+								<i class="mini teal circle icon"></i> 最强九五套路
+								<div class="ui teal basic left pointing label m-padded-mini">9月03</div>
+							</span>
+								<div class="ui orange basic left pointing label m-padded-mini">原创</div>
+						</a>
+						<a href="#" target="_blank" class="item">
+							<span>
+								<i class="mini teal circle icon"></i> 最强九五套路
+								<div class="ui teal basic left pointing label m-padded-mini">9月03</div>
+							</span>
+								<div class="ui orange basic left pointing label m-padded-mini">原创</div>
+						</a>
+					</div>
+					<h2 class="ui center aligned header">2018</h2>
+					<div class="ui fluid vertical menu">
+						<a href="#" target="_blank" class="item">
+							<span>
+								<i class="mini teal circle icon"></i> 最强九五套路
+								<div class="ui teal basic left pointing label m-padded-mini">9月03</div>
+							</span>
+								<div class="ui orange basic left pointing label m-padded-mini">原创</div>
+						</a>
+						<a href="#" target="_blank" class="item">
+							<span>
+								<i class="mini teal circle icon"></i> 最强九五套路
+								<div class="ui teal basic left pointing label m-padded-mini">9月03</div>
+							</span>
+								<div class="ui orange basic left pointing label m-padded-mini">原创</div>
+						</a>
+						<a href="#" target="_blank" class="item">
+							<span>
+								<i class="mini teal circle icon"></i> 最强九五套路
+								<div class="ui teal basic left pointing label m-padded-mini">9月03</div>
+							</span>
+								<div class="ui orange basic left pointing label m-padded-mini">原创</div>
+						</a>
+						<a href="#" target="_blank" class="item">
+							<span>
+								<i class="mini teal circle icon"></i> 最强九五套路
+								<div class="ui teal basic left pointing label m-padded-mini">9月03</div>
+							</span>
+								<div class="ui orange basic left pointing label m-padded-mini">原创</div>
+						</a>
+						<a href="#" target="_blank" class="item">
+							<span>
+								<i class="mini teal circle icon"></i> 最强九五套路
+								<div class="ui teal basic left pointing label m-padded-mini">9月03</div>
+							</span>
+								<div class="ui orange basic left pointing label m-padded-mini">原创</div>
+						</a>
+					</div>
+				</div>
 		</div>
-	</div>
-	<br />
-	<br />
+		<br />
+		<br />
+		<footer class="ui inverted vertical segment m-padded-tb-massive">
+			<div class="ui center aligned container">
+				<div class="ui inverted divided stackable grid">
+					<div class="three wide column">
+						<div class="ui inverted link list">
+							<div class="item">
+						<img src="../static/images/cat.jpg" class="ui rounded image" style="width: 110px;" alt="" />
+					</div>
+					</div>
+					</div>
+					<div class="three wide column">
+						<h4 class="ui inverted header m-text-thin m-text-spaced">最新博客</h4>
+						<div class="ui inverted link list">
+							<a href="#" class="item">用户故事</a>
+							<a href="#" class="item">用户故事</a>
+							<a href="#" class="item">用户故事</a>
+						</div>
+					</div>
+					<div class="three wide column">
+						<h4 class="ui inverted header m-text-thin m-text-spaced">联系我</h4>
+						<div class="ui inverted link list">
+							<a href="#" class="item">Email:1316196993@qq.com</a>
+							<a href="#" class="item">QQ:1316196993</a>
 
-<!--尾部引入-->
-	<footer th:replace="_fragments::footer"></footer>
+					</div>
+					</div>
+					<div class="seven wide column">
+						<h4 class="ui inverted header m-text-thin m-text-spaced">自我介绍</h4>
+						<p class="m-text-thin m-text-spaced m-opacity-mini">这是我的个人博客，分享我在生活学习中遇到的问题，欢迎来玩。</p>
+					</div>
+				</div>
+				<div class="ui inverted section divider"></div>
+				<p class="m-text-thin m-text-spaced m-opacity-tiny">Copyright@2020 - 2021 Designed By Deadsec</p>
+			</div>
+		</footer>
+		<script src="https://cdn.jsdelivr.net/npm/jquery@3.2/dist/jquery.min.js"></script>
+		<script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
 
-
-	<script src="https://cdn.jsdelivr.net/npm/jquery@3.2/dist/jquery.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
-
-	<script>
-		$('.menu.toggle').click(function(){
-			$('.m-item').toggleClass('m-mobile-hide');
-		});
-		$('#newBlog-container').load(/*[[@{/footer/newblog}]]*/"/footer/newblog")
-	</script>
-</body>
+		<script>
+			$('.menu.toggle').click(function(){
+				$('.m-item').toggleClass('m-mobile-hide');
+			});
+		</script>
+	</body>
 </html>
