--- a/templates/types.html
+++ b/templates/types.html
@@ -1,12 +1,33 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-	<head th:replace="_fragments :: head(~{::title})">
+<html lang="en">
+	<head>
+		<meta charset="utf-8" />
+		<meta name="viewport"content="width=device-width,initial-scale=1.0" />
 		<title>分类页面</title>
-
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
+		<link rel="stylesheet" type="text/css" href="../static/css/me.css"/>
 	</head>
 	<body>
-		<nav th:replace="_fragments :: menu(2)" >
-
+		<nav class="ui inverted  attached segment m-padded-tb-mini m-shadow-small"  >
+			<div class="ui container">			
+				<div class="ui inverted secondary stackable menu">
+				<h2 class="ui teal header item">blog</h2>
+				<a href="#"class="m-item item m-mobile-hide"><i class="home icon"></i>首页</a>
+				<a href="#"class="active m-item item m-mobile-hide"><i class="idea icon"></i>分类</a>
+				<a href="#"class="m-item item m-mobile-hide"><i class="tags icon"></i>标签</a>
+				<a href="#"class="m-item item m-mobile-hide"><i class="clone icon"></i>归档</a>
+				<a href="#"class="m-item item m-mobile-hide"><i class="info icon"></i>关于我</a>
+				<div class="right item m-mobile-hide">
+					<div class="ui icon inverted transparent input">
+						<input type="text" placeholder="Search...." />
+						<i class="search link icon"></i>
+					</div>
+				</div>
+			</div>
+			</div>
+			<a href="#" class="ui menu toggle black icon  button m-top-right m-mobile-show">
+				<i class="sidebar icon"></i>
+			</a>
 		</nav>
 		<div class=" m-padded-tb-big m-container-small">
 				<div class="ui container">
@@ -17,79 +38,294 @@
 								<h3 class="ui teal header">分类</h3>
 							</div>
 							<div class="right aligned column">
-								共	 <h3 class="ui orange header m-inline-block m-text-thin" th:text="${#arrays.length(types)}">14</h3> 个
+								共	 <h3 class="ui orange header m-inline-block m-text-thin">14</h3> 个
 							</div>
 						</div>
 					</div>
 					<div class="ui  attached segment m-padded-tb-large">
-						<div class="ui labeled button m-margin-tb-tiny"  th:each="map:${maps}">
-							<a href="#" th:href="@{'toType?id='+${map.key.id}}" class="ui basic teal button" th:text="${map.key.name}">
-								方法论
+						<div class="ui labeled button m-margin-tb-tiny">
+							<a href="#" class="ui basic teal button">
+								速八教学
 							</a>
-							<div class="ui teal basic  left pointing  label" th:each="number:${map.value}" >
-								<span  th:text="${number}">13</span>
-							</div>
+							<div class="ui basic teal left pointing label">24</div>
+						</div>
+						<div class="ui labeled button m-margin-tb-tiny">
+							<a href="#" class="ui basic  button">
+								95至尊
+							</a>
+							<div class="ui basic   left pointing label">24</div>
+						</div>
+						<div class="ui labeled button m-margin-tb-tiny">
+							<a href="#" class="ui basic  button">
+								土狗斗猎
+							</a>
+							<div class="ui basic   left pointing label">24</div>
+						</div>
+						<div class="ui labeled button m-margin-tb-tiny">
+							<a href="#" class="ui basic  button">
+								森林小法
+							</a>
+							<div class="ui basic   left pointing label">24</div>
+						</div>
+						<div class="ui labeled button m-margin-tb-tiny">
+							<a href="#" class="ui basic  button">
+								重秘狐狸
+							</a>
+							<div class="ui basic   left pointing label">24</div>
+						</div>
+						<div class="ui labeled button m-margin-tb-tiny">
+							<a href="#" class="ui basic button">
+								三国卡特
+							</a>
+							<div class="ui basic  left pointing label">24</div>
 						</div>
 						
 					</div>
-					<div class="ui top teal attached   segment">
-						<div class="ui padded vertical segment m-padded-tb-large m-padded-lr-clear" th:each="blog:${pageInfo.list}">
+					<div class="ui  top attached teal segment">
+						<div class="ui padded vertical segment m-padded-tb-large m-padded-lr-clear">
 							<div class="ui  mobile reversed stackable grid">
 								<div class="  eleven wide column">
-									<a th:href="'blog/' + ${blog.id}" style="color: black">
-										<h3 class="ui header"  th:text="${blog.title}" >伍兹</h3></a>
-									<p class="m-text-thin" th:text="${blog.description}">永远滴神永远滴神永远滴神永远滴神</p>
+									<h3 class="ui header">伍兹</h3>
+									<p class="m-text-thin">永远滴神永远滴神永远滴神永远滴神永远滴神永远滴神永远滴神永远滴神永远滴神永远滴神永远滴神</p>
 									<div class="ui stackable grid">
 										<div class="eleven wide column">
 											<div class="ui mini horizontal  link list">
 												<div class="item">
 													<img src="https://picsum.photos/id/103/50/50" alt="" class="ui avatar image" />
-													<div class="content"><a href="#" class="header" th:text="${blog.user.username}">李军</a></div>
+													<div class="content"><a href="#" class="header">李军</a></div>
 												</div>
 												<div class="item">
-													<i class="calender icon"></i><span th:text="${#dates.format(blog.createTime,'dd/MM/yyyy')}">2020</span>
+													<i class="calender icon"></i>2020-12-1
 												</div>
 												<div class="item">
-													<i class="eye icon" th:value="${blog.views}"></i> <span th:text="${blog.views}">666</span>
+													<i class="eye icon"></i> 666
 												</div>
 											</div>
 										</div>
 										<div class="right aligned five wide column">
-											<a href="#" target="_blank" class=" ui teal basic label m-padded-tiny m-text-thin" th:text="${blog.tag.name}">认知升级</a>
+											<a href="#" target="_blank" class=" ui teal basic label m-padded-tiny m-text-thin">认知升级</a>
 										</div>
 									</div>
 								</div>
 								<div class="five wide column">
 									<a href="#" target="_blank">
-										<img src="https://picsum.photos/id/1025/200/100" class="ui rounded image" th:src="${blog.firstPicture}"/>
+										<img src="https://picsum.photos/id/1025/200/100" class="ui rounded image"/>
 									</a>
 								</div>
 							</div>
 						</div>
-
-
-
-					</div>
+						<div class="ui padded vertical segment m-padded-tb-large m-padded-lr-clear">
+							<div class="ui  mobile reversed stackable grid">
+								<div class="  eleven wide column">
+									<h3 class="ui header">伍兹</h3>
+									<p class="m-text-thin">永远滴神永远滴神永远滴神永远滴神永远滴神永远滴神永远滴神永远滴神永远滴神永远滴神永远滴神</p>
+									<div class="ui stackable grid">
+										<div class="eleven wide column">
+											<div class="ui mini horizontal  link list">
+												<div class="item">
+													<img src="https://picsum.photos/id/103/50/50" alt="" class="ui avatar image" />
+													<div class="content"><a href="#" class="header">李军</a></div>
+												</div>
+												<div class="item">
+													<i class="calender icon"></i>2020-12-1
+												</div>
+												<div class="item">
+													<i class="eye icon"></i> 666
+												</div>
+											</div>
+										</div>
+										<div class="right aligned five wide column">
+											<a href="#" target="_blank" class=" ui teal basic label m-padded-tiny m-text-thin">认知升级</a>
+										</div>
+									</div>
+								</div>
+								<div class="five wide column">
+									<a href="#" target="_blank">
+										<img src="https://picsum.photos/id/1025/200/100" class="ui rounded image"/>
+									</a>
+								</div>
+							</div>
+						</div>
+						<div class="ui padded vertical segment m-padded-tb-large m-padded-lr-clear">
+							<div class="ui  mobile reversed stackable grid">
+								<div class="  eleven wide column">
+									<h3 class="ui header">伍兹</h3>
+									<p class="m-text-thin">永远滴神永远滴神永远滴神永远滴神永远滴神永远滴神永远滴神永远滴神永远滴神永远滴神永远滴神</p>
+									<div class="ui stackable grid">
+										<div class="eleven wide column">
+											<div class="ui mini horizontal  link list">
+												<div class="item">
+													<img src="https://picsum.photos/id/103/50/50" alt="" class="ui avatar image" />
+													<div class="content"><a href="#" class="header">李军</a></div>
+												</div>
+												<div class="item">
+													<i class="calender icon"></i>2020-12-1
+												</div>
+												<div class="item">
+													<i class="eye icon"></i> 666
+												</div>
+											</div>
+										</div>
+										<div class="right aligned five wide column">
+											<a href="#" target="_blank" class=" ui teal basic label m-padded-tiny m-text-thin">认知升级</a>
+										</div>
+									</div>
+								</div>
+								<div class="five wide column">
+									<a href="#" target="_blank">
+										<img src="https://picsum.photos/id/1025/200/100" class="ui rounded image"/>
+									</a>
+								</div>
+							</div>
+						</div>
+						<div class="ui padded vertical segment m-padded-tb-large m-padded-lr-clear">
+							<div class="ui  mobile reversed stackable grid">
+								<div class="  eleven wide column">
+									<h3 class="ui header">伍兹</h3>
+									<p class="m-text-thin">永远滴神永远滴神永远滴神永远滴神永远滴神永远滴神永远滴神永远滴神永远滴神永远滴神永远滴神</p>
+									<div class="ui stackable grid">
+										<div class="eleven wide column">
+											<div class="ui mini horizontal  link list">
+												<div class="item">
+													<img src="https://picsum.photos/id/103/50/50" alt="" class="ui avatar image" />
+													<div class="content"><a href="#" class="header">李军</a></div>
+												</div>
+												<div class="item">
+													<i class="calender icon"></i>2020-12-1
+												</div>
+												<div class="item">
+													<i class="eye icon"></i> 666
+												</div>
+											</div>
+										</div>
+										<div class="right aligned five wide column">
+											<a href="#" target="_blank" class=" ui teal basic label m-padded-tiny m-text-thin">认知升级</a>
+										</div>
+									</div>
+								</div>
+								<div class="five wide column">
+									<a href="#" target="_blank">
+										<img src="https://picsum.photos/id/1025/200/100" class="ui rounded image"/>
+									</a>
+								</div>
+							</div>
+						</div>
+						<div class="ui padded vertical segment m-padded-tb-large m-padded-lr-clear">
+							<div class="ui  mobile reversed stackable grid">
+								<div class="  eleven wide column">
+									<h3 class="ui header">伍兹</h3>
+									<p class="m-text-thin">永远滴神永远滴神永远滴神永远滴神永远滴神永远滴神永远滴神永远滴神永远滴神永远滴神永远滴神</p>
+									<div class="ui stackable grid">
+										<div class="eleven wide column">
+											<div class="ui mini horizontal  link list">
+												<div class="item">
+													<img src="https://picsum.photos/id/103/50/50" alt="" class="ui avatar image" />
+													<div class="content"><a href="#" class="header">李军</a></div>
+												</div>
+												<div class="item">
+													<i class="calender icon"></i>2020-12-1
+												</div>
+												<div class="item">
+													<i class="eye icon"></i> 666
+												</div>
+											</div>
+										</div>
+										<div class="right aligned five wide column">
+											<a href="#" target="_blank" class=" ui teal basic label m-padded-tiny m-text-thin">认知升级</a>
+										</div>
+									</div>
+								</div>
+								<div class="five wide column">
+									<a href="#" target="_blank">
+										<img src="https://picsum.photos/id/1025/200/100" class="ui rounded image"/>
+									</a>
+								</div>
+							</div>
+						</div>
+						<div class="ui padded vertical segment m-padded-tb-large m-padded-lr-clear">
+							<div class="ui  mobile reversed stackable grid">
+								<div class="  eleven wide column">
+									<h3 class="ui header">伍兹</h3>
+									<p class="m-text-thin">永远滴神永远滴神永远滴神永远滴神永远滴神永远滴神永远滴神永远滴神永远滴神永远滴神永远滴神</p>
+									<div class="ui stackable grid">
+										<div class="eleven wide column">
+											<div class="ui mini horizontal  link list">
+												<div class="item">
+													<img src="https://picsum.photos/id/103/50/50" alt="" class="ui avatar image" />
+													<div class="content"><a href="#" class="header">李军</a></div>
+												</div>
+												<div class="item">
+													<i class="calender icon"></i>2020-12-1
+												</div>
+												<div class="item">
+													<i class="eye icon"></i> 666
+												</div>
+											</div>
+										</div>
+										<div class="right aligned five wide column">
+											<a href="#" target="_blank" class=" ui teal basic label m-padded-tiny m-text-thin">认知升级</a>
+										</div>
+									</div>
+								</div>
+								<div class="five wide column">
+									<a href="#" target="_blank">
+										<img src="https://picsum.photos/id/1025/200/100" class="ui rounded image"/>
+									</a>
+								</div>
+							</div>
+						</div>
+				</div>
 				<div class="ui bottom attached segment">
 							<div class="ui middle aligned two column	grid">
-								<div class="column">
-									<div class="item"><a class="ui mini blue basic button" th:href="@{/types(pagenum=${pageInfo.hasPreviousPage}?${pageInfo.prePage}:1)}">上一页</a></div>
-								</div>
-								<div class="right aligned column">
-									<div class="item"><a class="ui mini blue basic button" th:href="@{/types(pagenum=${pageInfo.hasNextPage}?${pageInfo.nextPage}:${pageInfo.pages})}">下一页</a></div>
-								</div>
+							<div class="column">
+								<a href="" class="ui mini teal basic button">上一页</a>
+							</div>
+							<div class="right aligned column">
+								<a href="#" class="ui mini teal basic button">下一页</a>
+							</div>
 						</div>
 						</div>
 				</div>	
 				</div>
 		<br />
 		<br />
-		<footer th:replace="_fragments :: footer" class="ui inverted vertical segment m-padded-tb-massive">
+		<footer class="ui inverted vertical segment m-padded-tb-massive">
+			<div class="ui center aligned container">
+				<div class="ui inverted divided stackable grid">
+					<div class="three wide column">
+						<div class="ui inverted link list">
+							<div class="item">
+						<img src="../static/images/cat.jpg" class="ui rounded image" style="width: 110px;" alt="" />
+					</div>
+					</div>
+					</div>
+					<div class="three wide column">
+						<h4 class="ui inverted header m-text-thin m-text-spaced">最新博客</h4>
+						<div class="ui inverted link list">
+							<a href="#" class="item">用户故事</a>
+							<a href="#" class="item">用户故事</a>
+							<a href="#" class="item">用户故事</a>
+						</div>
+					</div>
+					<div class="three wide column">
+						<h4 class="ui inverted header m-text-thin m-text-spaced">联系我</h4>
+						<div class="ui inverted link list">
+							<a href="#" class="item">Email:1316196993@qq.com</a>
+							<a href="#" class="item">QQ:1316196993</a>
 
+					</div>
+					</div>
+					<div class="seven wide column">
+						<h4 class="ui inverted header m-text-thin m-text-spaced">自我介绍</h4>
+						<p class="m-text-thin m-text-spaced m-opacity-mini">这是我的个人博客，分享我在生活学习中遇到的问题，欢迎来玩。</p>
+					</div>
+				</div>
+				<div class="ui inverted section divider"></div>
+				<p class="m-text-thin m-text-spaced m-opacity-tiny">Copyright@2020 - 2021 Designed By Deadsec</p>
+			</div>
 		</footer>
-		<th:block th:replace="_fragments :: script">
-
-		</th:block>
+		<script src="https://cdn.jsdelivr.net/npm/jquery@3.2/dist/jquery.min.js"></script>
+		<script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
 
 		<script>
 			$('.menu.toggle').click(function(){
