--- a/templates/about.html
+++ b/templates/about.html
@@ -5,7 +5,7 @@
 		<meta name="viewport"content="width=device-width,initial-scale=1.0" />
 		<title>分类页面</title>
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
-		<link rel="stylesheet" type="text/css" href="../static/css/me.css"/>
+		<link rel="stylesheet" type="text/css" href="/static/css/me.css"/>
 	</head>
 	<body>
 		<nav class="ui inverted  attached segment m-padded-tb-mini m-shadow-small"  >
@@ -61,7 +61,7 @@
 								<a href="#" class="ui qq circular icon button" data-content="1316196993" data-position="bottom center"><i class="qq icon"></i></a>
 							</div>
 								<div class="ui wechatQR flowing popup  transition hidden">
-									<img src="../static/images/cat.jpg" alt="" class="ui rounded image" style="width: 100px;" />
+									<img src="/static/images/cat.jpg" alt="" class="ui rounded image" style="width: 100px;" />
 								</div>
 						</div>
 					</div>
@@ -75,7 +75,7 @@
 					<div class="three wide column">
 						<div class="ui inverted link list">
 							<div class="item">
-						<img src="../static/images/cat.jpg" class="ui rounded image" style="width: 110px;" alt="" />
+						<img src="/static/images/cat.jpg" class="ui rounded image" style="width: 110px;" alt="" />
 					</div>
 					</div>
 					</div>
@@ -90,8 +90,8 @@
 					<div class="three wide column">
 						<h4 class="ui inverted header m-text-thin m-text-spaced">联系我</h4>
 						<div class="ui inverted link list">
-							<a href="#" class="item">Email:1316196993@qq.com</a>
-							<a href="#" class="item">QQ:1316196993</a>
+							<a href="#" class="item">Email:sunjon529@gmail.com</a>
+							<a href="#" class="item">QQ:2418778713</a>
 
 					</div>
 					</div>
