--- a/templates/admin/bolgs.html
+++ b/templates/admin/bolgs.html
@@ -5,8 +5,8 @@
 		<meta name="viewport"content="width=device-width,initial-scale=1.0" />
 		<title>博客管理</title>
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
-		<link rel="stylesheet" type="text/css" href="../../css/me.css"/>
-		<script src="../../js/jquery-3.5.1.min.js"></script>
+		<link rel="stylesheet" type="text/css" href="/static/css/me.css"/>
+		<script src="/static/js/jquery-3.5.1.min.js"></script>
 	</head>
 	<body onload="loadINFO()">
 		<nav class="ui inverted  attached segment m-padded-tb-mini m-shadow-small"  >
@@ -126,7 +126,7 @@
 					<div class="three wide column">
 						<div class="ui inverted link list">
 							<div class="item">
-						<img src="../../images/cat.jpg" class="ui rounded image" style="width: 110px;" alt="" />
+						<img src="/static/images/cat.jpg" class="ui rounded image" style="width: 110px;" alt="" />
 					</div>
 					</div>
 					</div>
@@ -141,8 +141,8 @@
 					<div class="three wide column">
 						<h4 class="ui inverted header m-text-thin m-text-spaced">联系我</h4>
 						<div class="ui inverted link list">
-							<a href="#" class="item">Email:1316196993@qq.com</a>
-							<a href="#" class="item">QQ:1316196993</a>
+							<a href="#" class="item">Email:sunjon529@gmail.com</a>
+							<a href="#" class="item">QQ:2418778713</a>
 
 					</div>
 					</div>
@@ -166,6 +166,6 @@
 				on: 'hover'
 			});
 		</script>
-		<script src="../../js/adminAction.js"></script>
+		<script src="/static/js/adminAction.js"></script>
 	</body>
 </html>
